feat(newCall): new newCall view

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -4,7 +4,7 @@
   <file>languages/en.qm</file>
   <file>languages/fr.qm</file>
 
-  <!-- UI. -->
+  <!-- UI: Components. -->
   <file>ui/components/dialog/DialogDescription.qml</file>
   <file>ui/components/dialog/DialogPlus.qml</file>
   <file>ui/components/form/Collapse.qml</file>
@@ -12,10 +12,18 @@
   <file>ui/components/form/RoundButton.qml</file>
   <file>ui/components/form/ToolBarButton.qml</file>
   <file>ui/components/form/TransparentComboBox.qml</file>
+  <file>ui/components/misc/Contact.qml</file>
+  <file>ui/components/select/SelectContact.qml</file>
+
+  <!-- UI: Views. -->
   <file>ui/views/mainWindow.qml</file>
   <file>ui/views/manageAccounts.qml</file>
+  <file>ui/views/newCall.qml</file>
 
   <!-- Images. -->
+  <file>imgs/avatar.svg</file>
+  <file>imgs/camera.svg</file>
+  <file>imgs/phone.svg</file>
   <file>imgs/collapse.svg</file>
   <file>imgs/led_absent.svg</file>
   <file>imgs/led_connected.svg</file>
