feat(mainWindow): home view implemented

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -9,6 +9,7 @@
   <file>ui/components/dialog/DialogPlus.qml</file>
   <file>ui/components/form/Collapse.qml</file>
   <file>ui/components/form/DialogButton.qml</file>
+  <file>ui/components/form/DialogCheckBox.qml</file>
   <file>ui/components/form/ToolBarButton.qml</file>
   <file>ui/components/form/TransparentComboBox.qml</file>
   <file>ui/components/misc/Contact.qml</file>
@@ -16,7 +17,8 @@
   <file>ui/components/select/SelectContact.qml</file>
 
   <!-- UI: Views. -->
-  <file>ui/views/home/home.qml</file>
+  <file>ui/views/mainWindow/home.qml</file>
+  <file>ui/views/mainWindow/mainWindow.qml</file>
   <file>ui/views/manageAccounts.qml</file>
   <file>ui/views/newCall.qml</file>
 
