fix(app): refactoring

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -1,47 +1,42 @@
 <!DOCTYPE RCC><RCC version="1.0">
-<qresource prefix="/">
-  <!-- Languages. -->
-  <file>languages/en.qm</file>
-  <file>languages/fr.qm</file>
-
-  <!-- UI: Components. -->
-  <file>ui/components/collapse/Collapse.qml</file>
-  <file>ui/components/contact/Avatar.qml</file>
-  <file>ui/components/contact/ShortContactDescription.qml</file>
-  <file>ui/components/dialog/DialogDescription.qml</file>
-  <file>ui/components/dialog/DialogPlus.qml</file>
-  <file>ui/components/form/DarkButton.qml</file>
-  <file>ui/components/form/CheckBoxText.qml</file>
-  <file>ui/components/form/DropZone.qml</file>
-  <file>ui/components/form/ExclusiveButtons.qml</file>
-  <file>ui/components/form/LightButton.qml</file>
-  <file>ui/components/form/SmallButton.qml</file>
-  <file>ui/components/form/ToolBarButton.qml</file>
-  <file>ui/components/form/TransparentComboBox.qml</file>
-  <file>ui/components/misc/Contact.qml</file>
-  <file>ui/components/misc/MenuEntry.qml</file>
-  <file>ui/components/scrollBar/ForceScrollBar.qml</file>
-  <file>ui/components/select/SelectContact.qml</file>
-
-  <!-- UI: Views. -->
-  <file>ui/views/mainWindow/contacts.qml</file>
-  <file>ui/views/mainWindow/conversation.qml</file>
-  <file>ui/views/mainWindow/home.qml</file>
-  <file>ui/views/mainWindow/mainWindow.qml</file>
-  <file>ui/views/manageAccounts.qml</file>
-  <file>ui/views/newCall.qml</file>
-
-  <!-- Images. -->
-  <file>imgs/avatar.svg</file>
-  <file>imgs/camera.svg</file>
-  <file>imgs/chat_attachment.svg</file>
-  <file>imgs/collapse.svg</file>
-  <file>imgs/led_absent.svg</file>
-  <file>imgs/led_connected.svg</file>
-  <file>imgs/led_disconnected.svg</file>
-  <file>imgs/led_do_not_disturb.svg</file>
-  <file>imgs/phone.svg</file>
-  <file>imgs/start_conference.svg</file>
-  <file>imgs/valid.svg</file>
-</qresource>
+  <qresource prefix="/">
+    <file>languages/fr.qm</file>
+    <file>languages/en.qm</file>
+    <file>ui/components/scrollBar/ForceScrollBar.qml</file>
+    <file>ui/components/misc/MenuEntry.qml</file>
+    <file>ui/components/select/SelectContact.qml</file>
+    <file>ui/components/collapse/Collapse.qml</file>
+    <file>ui/components/contact/Contact.qml</file>
+    <file>ui/components/contact/ShortContactDescription.qml</file>
+    <file>ui/components/contact/Avatar.qml</file>
+    <file>ui/components/dialog/DialogDescription.qml</file>
+    <file>ui/components/dialog/DialogPlus.qml</file>
+    <file>ui/components/form/CheckBoxText.qml</file>
+    <file>ui/components/form/DropZone.qml</file>
+    <file>ui/components/form/LightButton.qml</file>
+    <file>ui/components/form/ExclusiveButtons.qml</file>
+    <file>ui/components/form/ActionBar.qml</file>
+    <file>ui/components/form/ActionButton.qml</file>
+    <file>ui/components/form/TransparentComboBox.qml</file>
+    <file>ui/components/form/SmallButton.qml</file>
+    <file>ui/components/form/DarkButton.qml</file>
+    <file>ui/views/newCall.qml</file>
+    <file>ui/views/manageAccounts.qml</file>
+    <file>ui/views/mainWindow/mainWindow.qml</file>
+    <file>ui/views/mainWindow/contacts.qml</file>
+    <file>ui/views/mainWindow/home.qml</file>
+    <file>ui/views/mainWindow/conversation.qml</file>
+    <file>imgs/led_disconnected.svg</file>
+    <file>imgs/valid.svg</file>
+    <file>imgs/led_do_not_disturb.svg</file>
+    <file>imgs/conference.svg</file>
+    <file>imgs/cam.svg</file>
+    <file>imgs/chat_attachment.svg</file>
+    <file>imgs/led_connected.svg</file>
+    <file>imgs/led_absent.svg</file>
+    <file>imgs/call.svg</file>
+    <file>imgs/collapse.svg</file>
+    <file>imgs/delete.svg</file>
+    <file>imgs/contact.svg</file>
+  </qresource>
 </RCC>
