fix(mainWindow/conversation): display contact actions

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -31,6 +31,7 @@
     <file>imgs/led_do_not_disturb.svg</file>
     <file>imgs/conference.svg</file>
     <file>imgs/cam.svg</file>
+    <file>imgs/chat.svg</file>
     <file>imgs/chat_attachment.svg</file>
     <file>imgs/led_connected.svg</file>
     <file>imgs/led_absent.svg</file>
