--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -20,6 +20,7 @@
     <file>ui/components/form/TransparentComboBox.qml</file>
     <file>ui/components/form/SmallButton.qml</file>
     <file>ui/components/form/DarkButton.qml</file>
+    <file>ui/scripts/utils.js</file>
     <file>ui/views/newCall.qml</file>
     <file>ui/views/manageAccounts.qml</file>
     <file>ui/views/mainWindow/mainWindow.qml</file>
