--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -5,11 +5,13 @@
     <file>ui/components/scrollBar/ForceScrollBar.qml</file>
     <file>ui/components/misc/MenuEntry.qml</file>
     <file>ui/components/timeline/Timeline.qml</file>
+    <file>ui/components/image/Icon.qml</file>
     <file>ui/components/select/SelectContact.qml</file>
     <file>ui/components/collapse/Collapse.qml</file>
     <file>ui/components/chat/IncomingMessage.qml</file>
     <file>ui/components/chat/Chat.qml</file>
     <file>ui/components/chat/OutgoingMessage.qml</file>
+    <file>ui/components/chat/Event.qml</file>
     <file>ui/components/chat/Message.qml</file>
     <file>ui/components/contact/Contact.qml</file>
     <file>ui/components/contact/ShortContactDescription.qml</file>
@@ -33,11 +35,15 @@
     <file>ui/views/mainWindow/contacts.qml</file>
     <file>ui/views/mainWindow/home.qml</file>
     <file>ui/views/mainWindow/conversation.qml</file>
+    <file>imgs/lost_outgoing_call.svg</file>
     <file>imgs/led_disconnected.svg</file>
     <file>imgs/valid.svg</file>
+    <file>imgs/incoming_call.svg</file>
     <file>imgs/led_do_not_disturb.svg</file>
+    <file>imgs/lost_incoming_call.svg</file>
     <file>imgs/conference.svg</file>
     <file>imgs/cam.svg</file>
+    <file>imgs/hangup.svg</file>
     <file>imgs/chat.svg</file>
     <file>imgs/chat_attachment.svg</file>
     <file>imgs/led_connected.svg</file>
