--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -39,6 +39,7 @@
     <file>imgs/led_disconnected.svg</file>
     <file>imgs/valid.svg</file>
     <file>imgs/incoming_call.svg</file>
+    <file>imgs/linphone.png</file>
     <file>imgs/led_do_not_disturb.svg</file>
     <file>imgs/lost_incoming_call.svg</file>
     <file>imgs/conference.svg</file>
