--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -3,6 +3,7 @@
     <file>languages/fr.qm</file>
     <file>languages/en.qm</file>
     <file>ui/components/scrollBar/ForceScrollBar.qml</file>
+    <file>ui/components/searchBox/SearchBox.qml</file>
     <file>ui/components/misc/MenuEntry.qml</file>
     <file>ui/components/timeline/Timeline.qml</file>
     <file>ui/components/image/Icon.qml</file>
@@ -16,6 +17,7 @@
     <file>ui/components/contact/Contact.qml</file>
     <file>ui/components/contact/ContactDescription.qml</file>
     <file>ui/components/contact/Avatar.qml</file>
+    <file>ui/components/popup/DropDownMenu.qml</file>
     <file>ui/components/dialog/ConfirmDialog.qml</file>
     <file>ui/components/dialog/DialogDescription.qml</file>
     <file>ui/components/dialog/DialogPlus.qml</file>
