feat(timeline): use style file

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -61,6 +61,7 @@
     <file>imgs/lost_incoming_call.svg</file>
     <file>imgs/conference.svg</file>
     <file>imgs/cam.svg</file>
+    <file>imgs/history.svg</file>
     <file>imgs/hangup.svg</file>
     <file>imgs/chat.svg</file>
     <file>imgs/chat_attachment.svg</file>
