fix(app): move `Linphone` dir in `modules` dir

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -21,54 +21,54 @@
     <file>imgs/valid.svg</file>
     <file>languages/en.qm</file>
     <file>languages/fr.qm</file>
-    <file>ui/Linphone/Chat/Chat.qml</file>
-    <file>ui/Linphone/Chat/Event.qml</file>
-    <file>ui/Linphone/Chat/IncomingMessage.qml</file>
-    <file>ui/Linphone/Chat/Message.qml</file>
-    <file>ui/Linphone/Chat/OutgoingMessage.qml</file>
-    <file>ui/Linphone/Collapse/Collapse.qml</file>
-    <file>ui/Linphone/Constants.qml</file>
-    <file>ui/Linphone/Contact/Avatar.qml</file>
-    <file>ui/Linphone/Contact/ContactDescription.qml</file>
-    <file>ui/Linphone/Contact/Contact.qml</file>
-    <file>ui/Linphone/Dialog/ConfirmDialog.qml</file>
-    <file>ui/Linphone/Dialog/DialogDescription.qml</file>
-    <file>ui/Linphone/Dialog/DialogPlus.qml</file>
-    <file>ui/Linphone/Form/ActionBar.qml</file>
-    <file>ui/Linphone/Form/ActionButton.qml</file>
-    <file>ui/Linphone/Form/CheckBoxText.qml</file>
-    <file>ui/Linphone/Form/DarkButton.qml</file>
-    <file>ui/Linphone/Form/DropZone.qml</file>
-    <file>ui/Linphone/Form/ExclusiveButtons.qml</file>
-    <file>ui/Linphone/Form/LightButton.qml</file>
-    <file>ui/Linphone/Form/ListForm.qml</file>
-    <file>ui/Linphone/Form/SmallButton.qml</file>
-    <file>ui/Linphone/Form/TransparentComboBox.qml</file>
-    <file>ui/Linphone/Image/Icon.qml</file>
-    <file>ui/Linphone/InvertedMouseArea/InvertedMouseArea.qml</file>
-    <file>ui/Linphone/Misc/MenuEntry.qml</file>
-    <file>ui/Linphone/Popup/DropDownMenu.qml</file>
-    <file>ui/Linphone/Popup/PopupShadow.qml</file>
-    <file>ui/Linphone/qmldir</file>
-    <file>ui/Linphone/ScrollBar/ForceScrollBar.qml</file>
-    <file>ui/Linphone/SearchBox/SearchBox.qml</file>
-    <file>ui/Linphone/Select/SelectContact.qml</file>
-    <file>ui/Linphone/Styles/CollapseStyle.qml</file>
-    <file>ui/Linphone/Styles/DialogStyle.qml</file>
-    <file>ui/Linphone/Styles/PopupStyle.qml</file>
-    <file>ui/Linphone/Styles/qmldir</file>
-    <file>ui/Linphone/Styles/ScrollBarStyle.qml</file>
-    <file>ui/Linphone/Styles/SearchBoxStyle.qml</file>
-    <file>ui/Linphone/Styles/TimelineStyle.qml</file>
-    <file>ui/Linphone/Timeline/Timeline.qml</file>
-    <file>ui/Linphone/View/ScrollableListView.qml</file>
+    <file>ui/modules/Linphone/Chat/Chat.qml</file>
+    <file>ui/modules/Linphone/Chat/Event.qml</file>
+    <file>ui/modules/Linphone/Chat/IncomingMessage.qml</file>
+    <file>ui/modules/Linphone/Chat/Message.qml</file>
+    <file>ui/modules/Linphone/Chat/OutgoingMessage.qml</file>
+    <file>ui/modules/Linphone/Collapse/Collapse.qml</file>
+    <file>ui/modules/Linphone/Constants.qml</file>
+    <file>ui/modules/Linphone/Contact/Avatar.qml</file>
+    <file>ui/modules/Linphone/Contact/ContactDescription.qml</file>
+    <file>ui/modules/Linphone/Contact/Contact.qml</file>
+    <file>ui/modules/Linphone/Dialog/ConfirmDialog.qml</file>
+    <file>ui/modules/Linphone/Dialog/DialogDescription.qml</file>
+    <file>ui/modules/Linphone/Dialog/DialogPlus.qml</file>
+    <file>ui/modules/Linphone/Form/ActionBar.qml</file>
+    <file>ui/modules/Linphone/Form/ActionButton.qml</file>
+    <file>ui/modules/Linphone/Form/CheckBoxText.qml</file>
+    <file>ui/modules/Linphone/Form/DarkButton.qml</file>
+    <file>ui/modules/Linphone/Form/DropZone.qml</file>
+    <file>ui/modules/Linphone/Form/ExclusiveButtons.qml</file>
+    <file>ui/modules/Linphone/Form/LightButton.qml</file>
+    <file>ui/modules/Linphone/Form/ListForm.qml</file>
+    <file>ui/modules/Linphone/Form/SmallButton.qml</file>
+    <file>ui/modules/Linphone/Form/TransparentComboBox.qml</file>
+    <file>ui/modules/Linphone/Image/Icon.qml</file>
+    <file>ui/modules/Linphone/InvertedMouseArea/InvertedMouseArea.qml</file>
+    <file>ui/modules/Linphone/Misc/MenuEntry.qml</file>
+    <file>ui/modules/Linphone/Popup/DropDownMenu.qml</file>
+    <file>ui/modules/Linphone/Popup/PopupShadow.qml</file>
+    <file>ui/modules/Linphone/qmldir</file>
+    <file>ui/modules/Linphone/ScrollBar/ForceScrollBar.qml</file>
+    <file>ui/modules/Linphone/SearchBox/SearchBox.qml</file>
+    <file>ui/modules/Linphone/Select/SelectContact.qml</file>
+    <file>ui/modules/Linphone/Styles/CollapseStyle.qml</file>
+    <file>ui/modules/Linphone/Styles/DialogStyle.qml</file>
+    <file>ui/modules/Linphone/Styles/PopupStyle.qml</file>
+    <file>ui/modules/Linphone/Styles/qmldir</file>
+    <file>ui/modules/Linphone/Styles/ScrollBarStyle.qml</file>
+    <file>ui/modules/Linphone/Styles/SearchBoxStyle.qml</file>
+    <file>ui/modules/Linphone/Styles/TimelineStyle.qml</file>
+    <file>ui/modules/Linphone/Timeline/Timeline.qml</file>
+    <file>ui/modules/Linphone/View/ScrollableListView.qml</file>
     <file>ui/scripts/utils.js</file>
-    <file>ui/Views/MainWindow/Contact.qml</file>
-    <file>ui/Views/MainWindow/Contacts.qml</file>
-    <file>ui/Views/MainWindow/Conversation.qml</file>
-    <file>ui/Views/MainWindow/Home.qml</file>
-    <file>ui/Views/MainWindow/MainWindow.qml</file>
-    <file>ui/Views/ManageAccounts.qml</file>
-    <file>ui/Views/NewCall.qml</file>
+    <file>ui/views/MainWindow/Contact.qml</file>
+    <file>ui/views/MainWindow/Contacts.qml</file>
+    <file>ui/views/MainWindow/Conversation.qml</file>
+    <file>ui/views/MainWindow/Home.qml</file>
+    <file>ui/views/MainWindow/MainWindow.qml</file>
+    <file>ui/views/ManageAccounts.qml</file>
+    <file>ui/views/NewCall.qml</file>
   </qresource>
 </RCC>
