--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -6,10 +6,12 @@
     <file>imgs/chat.svg</file>
     <file>imgs/collapse.svg</file>
     <file>imgs/conference.svg</file>
+    <file>imgs/contacts_list.svg</file>
     <file>imgs/contact.svg</file>
     <file>imgs/delete.svg</file>
     <file>imgs/hangup.svg</file>
     <file>imgs/history.svg</file>
+    <file>imgs/home.svg</file>
     <file>imgs/incoming_call.svg</file>
     <file>imgs/led_absent.svg</file>
     <file>imgs/led_connected.svg</file>
@@ -18,6 +20,7 @@
     <file>imgs/linphone.png</file>
     <file>imgs/lost_incoming_call.svg</file>
     <file>imgs/lost_outgoing_call.svg</file>
+    <file>imgs/right_arrow.svg</file>
     <file>imgs/valid.svg</file>
     <file>languages/en.qm</file>
     <file>languages/fr.qm</file>
@@ -47,7 +50,7 @@
     <file>ui/modules/Linphone/Form/TransparentComboBox.qml</file>
     <file>ui/modules/Linphone/Image/Icon.qml</file>
     <file>ui/modules/Linphone/InvertedMouseArea.qml</file>
-    <file>ui/modules/Linphone/Misc/MenuEntry.qml</file>
+    <file>ui/modules/Linphone/Menu.qml</file>
     <file>ui/modules/Linphone/Popup/DropDownMenu.qml</file>
     <file>ui/modules/Linphone/Popup/PopupShadow.qml</file>
     <file>ui/modules/Linphone/qmldir</file>
