feat(app): new Paned component

--- a/tests/resources.qrc
+++ b/tests/resources.qrc
@@ -77,6 +77,7 @@
     <file>ui/modules/Linphone/Styles/Form/TextButtonBStyle.qml</file>
     <file>ui/modules/Linphone/Styles/Form/TransparentComboBoxStyle.qml</file>
     <file>ui/modules/Linphone/Styles/MenuStyle.qml</file>
+    <file>ui/modules/Linphone/Styles/PanedStyle.qml</file>
     <file>ui/modules/Linphone/Styles/PopupStyle.qml</file>
     <file>ui/modules/Linphone/Styles/qmldir</file>
     <file>ui/modules/Linphone/Styles/SearchBoxStyle.qml</file>
